tests/baselines/reference/unusedPrivateMethodInClass1.errors.txt
tests/cases/compiler/unusedPrivateMethodInClass1.ts(3,13): error TS6132: Variable 'function1' has never been used.


==== tests/cases/compiler/unusedPrivateMethodInClass1.ts (1 errors) ====
    
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6132: Variable 'function1' has never been used.
            var y = 10;
            y++;
        }
    }